2003-06-13  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* oct-stream.cc (printf_value_cache::string_value): Don't attempt
	to extract values when none are available.

2003-06-04  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* pt-plot.cc (Vgnuplot_has_multiplot): Delete variable.
	(gnuplot_has_multiplot): Delete.
	(symbols_of_pt_plot): Delete DEFVAR for gnuplot_has_multiplot.

2003-05-28  Teemu Ikonen <tpikonen@pcu.helsinki.fi>

	* load-save.cc (save_mat5_binary_element, save_mat_binary_data):
	Allow saving of non-7-bit ASCII characters.

2003-05-28  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* oct-stream.cc (FINISH_CHARACTER_CONVERSION,
	octave_base_stream::do_scanf): Do a better job of resizing for
	charachter conversions.

2003-05-25  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* ov-cx-mat.cc (octave_complex_matrix::assign): Move definition here.
	* ov-cx-mat.h: From here.

2003-05-24  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* ov-range.cc (octave_range::try_narrowing_conversion): Convert to
	[](1x0) instead of [](0x0) if range is empty.

2003-05-14  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* Makefile.in: Handle DESTDIR.

2003-05-13  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* lex.l: Use yyunput (X, yytext) instead of unput (X) for newer
	versions of flex.

2003-05-01  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* load-save.cc (save_ascii_data): If saving a range with
	non-integer base, limit, or increment, save as matrix instead.
	(get_save_type): Avoid unsigned types.

2003-04-30  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* octave.cc (initialize_pathsearch): Don't save old and set new
	value of TEXMFDBS.

	* toplev.cc (restore_texmfdbs_envvar): Delete function.
	(Fsystem): Don't set and reset TEXMFDBS.

	* toplev.h, toplev.cc (octave_original_texmfdbs): Delete variable.

2003-04-25  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* DLD-FUNCTIONS/getpwent.cc (Fgetpwnam): Delete unnecessary
	c_str() method.

2003-04-22  John W. Eaton  <jwe@bevo.che.wisc.edu>
